# api/src/main/java/com/moviehub/controller/CommentController.java
@@ -1,11 +1,16 @@
 package com.moviehub.controller;
 
 import com.moviehub.CommentsApi;
+import com.moviehub.dto.AddCommentRequest;
+import com.moviehub.dto.CommentInfoPage;
 import com.moviehub.dto.ReactionTypeRequest;
+import com.moviehub.entity.CommentReply;
 import com.moviehub.entity.ReactionType;
+import com.moviehub.mapper.dto.CommentInfoMapper;
 import com.moviehub.mapper.dto.ReactionTypeMapper;
-import com.moviehub.service.CommentService;
+import com.moviehub.service.CommentInfoService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -15,19 +20,34 @@ import java.util.UUID;
 @RequiredArgsConstructor
 public class CommentController implements CommentsApi {
 
-    private final CommentService commentService;
+    private final CommentInfoService commentInfoService;
 
     @Override
     public ResponseEntity<Void> deleteComment(UUID commentId) {
-        commentService.deleteComment(commentId);
+        commentInfoService.deleteComment(commentId);
 
         return ResponseEntity.noContent().build();
     }
 
     @Override
+    public ResponseEntity<Void> addReply(UUID commentId, AddCommentRequest addCommentRequest) {
+        commentInfoService.addReply(commentId, addCommentRequest.getText());
+
+        return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<CommentInfoPage> getReplies(UUID commentId, Integer page, Integer limit, String sort) {
+        Page<CommentReply> replies = commentInfoService.getReplies(commentId, page, limit, sort);
+        CommentInfoPage commentInfoPage = CommentInfoMapper.mapToCommentInfoPage(replies);
+
+        return ResponseEntity.ok(commentInfoPage);
+    }
+
+    @Override
     public ResponseEntity<Void> addCommentReaction(UUID commentId, ReactionTypeRequest reactionTypeRequest) {
         ReactionType reactionType = ReactionTypeMapper.mapToReactionType(reactionTypeRequest);
-        commentService.addCommentReaction(commentId, reactionType);
+        commentInfoService.addCommentReaction(commentId, reactionType);
 
         return ResponseEntity.noContent().build();
     }
